# cracking-the-coding-interview

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  LICENSE.txt  Makefile  README.md  dummy_file.txt  tests.cpp  tests.py
04_trees_and_graphs/: 4.1_path_exists.py  4.2_make_bst.py  4.3_make_ll.py  4.6_get_next.py  make_bst.py  print_graph.py  tree_basics.py
chapter_01_arrays_strings/: is_unique.py  problem_01_06_string_compression.py  problem_01_07_rotate_matrix.py  problem_1_5_one_away.py  problem_1_7_rotate_matrix.py  problem_1_8_set_zero.py
chapter_02_linked_lists/: LinkedList.py  problem_02_05_sum_lists.py  problem_2_1_remove_dups.py  problem_2_2_return_kth_to_last.py  problem_2_3_delete_middle.py  problem_2_4_partition.py  problem_2_5_sum_lists.py  problem_2_6_palindrome.py  problem_2_7_intersection.py  problem_2_8_find_loop.py
chapter_03_stacks_queues/: Queue.py  Stack.py  problem_03_01_three_in_one.py  problem_3_1_three_in_one.py  problem_3_2_stack_min.py  problem_3_3_stack_of_plates.py  problem_3_4_queue_via_stacks.py  problem_3_5_sort_stack.py  problem_3_6_animal_shelter.py
chapter_04_trees_and_graphs/: problem_04_08_first_common_ancestor.py  problem_04_11_random_node.py  problem_4_1_path_exists.py  problem_4_2_make_bst.py  problem_4_3_make_ll.py  problem_4_4_is_balanced.py  problem_4_5_check_BST.py  problem_4_5_validate_BST.py  problem_4_6_get_next.py  problem_4_7_build_order.py  tree_basics.py
chapter_05_bit_manipulation/: problem_05_01_insertion.py  problem_5_0_convert_binary.py
chapter_08_recursion_and_dynamic_programming/: problem_08_11_coins.py
chapter_17_hard/: problem_17_15_longest_combination.py
cpp_solutions/chapter_01_arrays_and_strings/: chapter_01_includes.h  problem_01_01_isUnique.cpp  problem_01_01_isUnique.h  problem_01_01_is_unique.h  problem_01_02_arePermutations.cpp  problem_01_02_arePermutations.h  problem_01_02_isPermutation.cpp  problem_01_03_URLify.cpp  problem_01_03_URLify.h  problem_01_04_palindromePermutation.cpp  problem_01_04_palindromePermutation.h  problem_01_05_oneAway.cpp  problem_01_05_oneAway.h  problem_01_06_stringCompression.cpp  problem_01_06_stringCompression.h  problem_01_07_rotate.cpp  problem_01_07_rotateMatrix.cpp  problem_01_07_rotateMatrix.h  problem_01_08_setZero.cpp  problem_01_08_setZero.h  problem_01_09_stringRotation.cpp  problem_01_09_stringRotation.h
cpp_solutions/chapter_02_linked_lists/: LinkedListNode.h  Node.h  SinglyLinkedNode.h  chapter_02_includes.h  problem_02_01_removeDups.cpp  problem_02_01_removeDups.h  problem_02_02_returnKthToLast.cpp  problem_02_02_returnKthToLast.h  problem_02_03_deleteMiddleNode.h  problem_02_04_partition.h  problem_02_05_sumLists.h  problem_02_06_palindrome.h  problem_02_07_intersection.h  problem_02_08_findLoop.h
cpp_solutions/chapter_03_stacks_and_queues/: Queue.h  Stack.h  chapter_03_includes.h  problem_03_01_threeInOne.cpp  problem_03_01_threeInOne.h  problem_03_02_StackMin.h  problem_03_04_QueueViaStacks.h  problem_03_05_sortStack.h  problem_03_06_animalShelter.cpp  problem_03_06_animalShelter.h
cpp_solutions/chapter_04_trees_and_graphs/: chapter_04_includes.h  problem_04_01_pathExists.h  problem_04_02_minimalTree.h  problem_04_03_makeLL.h  problem_04_04_checkBalanced.h  problem_04_05_validateBST.h  problem_04_06_successor.h  problem_04_07_buildOrder.cpp  problem_04_07_buildOrder.h  problem_04_08_firstCommonAncestor.h  problem_04_10_checkSubtree.h  problem_04_11_randomBST.h  problem_04_12_pathsWithSum.h
cpp_solutions/chapter_05_bit_manipulation/: chapter_05_flipBitToWin.cpp  chapter_05_includes.h  problem_05_01_insertion.cpp  problem_05_01_insertion.h  problem_05_02_binaryToString.cpp  problem_05_02_binaryToString.h  problem_05_03_flipBitToWin.cpp  problem_05_03_flipBitToWin.h  problem_05_04_nextNumber.cpp  problem_05_04_nextNumber.h  problem_05_06_conversion.cpp  problem_05_06_conversion.h  problem_05_07_pairwiseSwap.cpp  problem_05_07_pairwiseSwap.h  problem_05_08_drawLine.cpp  problem_05_08_drawLine.h
cpp_solutions/chapter_08_recursion_and_dynamic_programming/: chapter_08_includes.h  problem_08_01_tripleStep.cpp  problem_08_01_tripleStep.h  problem_08_02_robotGrid.cpp  problem_08_02_robotGrid.h  problem_08_03_magicIndex.cpp  problem_08_03_magicIndex.h  problem_08_04_powerSet.cpp  problem_08_04_powerSet.h  problem_08_05_recursiveMultiply.cpp  problem_08_05_recursiveMultiply.h  problem_08_06_hanoiTowers.cpp  problem_08_07_permutationsNoDups.cpp  problem_08_07_permutationsNoDups.h  problem_08_08_permutationsWithDups.cpp  problem_08_08_permutationsWithDups.h  problem_08_09_parens.cpp  problem_08_10_paintFill.cpp  problem_08_10_paintFill.h  problem_08_11_coins.cpp  problem_08_12_eightQueens.cpp  problem_08_13_stackOfBoxes.cpp  problem_08_14_booleanEvaluation.cpp
cpp_solutions/chapter_10_sorting_and_searching/: binarySearch.h  chapter_10_includes.h  mergeSort.h  problem_10_01_sortedMerge.h  problem_10_02_anagramSort.cpp  problem_10_02_anagramSort.h  problem_10_03_rotatedSearch.h  problem_10_04_searchNoSize.cpp  problem_10_04_searchNoSize.h  problem_10_05_sparseSearch.cpp  problem_10_05_sparseSearch.h  problem_10_07_missingInt.cpp  problem_10_07_missingInt.h  problem_10_08_findDuplicates.cpp  problem_10_08_findDuplicates.h  problem_10_09_matrixSearch.h  problem_10_10_rankFromStream.cpp  problem_10_10_rankFromStream.h  problem_10_11_peaksAndValleys.h  quickSort.h
cpp_solutions/chapter_12_cpp/: chapter_12_includes.h  problem_12_01_data_1.txt  problem_12_01_data_2.txt  problem_12_01_lastKLines.h  problem_12_02_reverse.cpp  problem_12_02_reverse.h  problem_12_03_hashTable.h  problem_12_04_virtualFunctions.h  problem_12_05_shallowVsDeepCopy.h  problem_12_06_volatile.h  problem_12_07_virtualBaseClass.h  problem_12_08_copyNode.h  problem_12_09_smartPointer.h  problem_12_10_alignedMalloc.h
cpp_solutions/chapter_16_moderate/: chapter_16_includes.h  problem_16_01_swapNumbers.h  problem_16_02_wordFrequencies.cpp  problem_16_02_wordFrequencies.h  problem_16_03_intersection.cpp  problem_16_03_intersection.h  problem_16_04_ticTacWin.cpp  (+14 more)
(+80 files in other folders)
